# dna-breathing-dynamics-encoding

./: .editorconfig  .flake8  .gitignore  AGENTS.md  CHARTER.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  pyproject.toml  repo-meta.txt  requirements.txt  setup.py  test.csv  test_defaults.csv  test_final.csv  test_lifetimes.csv
.claude/agents/: dna-biology-docs.md  geometry-expert.md
.github/agents/: documentation_admin.md  experiment_orchestrator.md  grand_marshal.md  incremental_coder_v2.md  subject-matter-expert.md  testweaver.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
artifacts/ddg_helical_validation/: DETAILED_FINDINGS.md  config.json  pairs.csv  report.md  stats.csv  trend.csv
data/: .gitignore  DATA_PLAN.md  README.md  datasets.yml  download_data.sh  synthetic_brunello.fasta
data/human/brunello/: DOWNLOAD_INSTRUCTIONS.md  METADATA.md  sequences.fasta
data/human/depmap_subsample/: METADATA.md  sequences.fasta
data/human/doench2016/: METADATA.md  sequences.fasta
data/mouse/gecko_v2/: METADATA.md  sequences.fasta
data/raw/: brunello_1k_subsample.fasta  brunello_parsed.fasta  dummy.csv  sample.fasta
data/seed/sample/: METADATA.md  sequences.fasta
docs/: DATASETS.md  EMPIRICAL_FINDINGS_REPORT.md  IMPLEMENTATION.md  INTEGRATION_PLAN.md  OVERVIEW.md  README.md  REPRODUCTION.md  THEORY.md  VALIDATION.md
docs/api/: overview.md
docs/archive/: PR_SUMMARY.md  README.md
docs/guides/: getting_started.md
docs/research/: DNA_Breathing_Dynamics_and_ Encoding.md
examples/: basic_usage.py
experiments/: __init__.py  ddg_helical_validation.py  issue47_local_perturbation.py  issue47_pairs.fasta  issue47_stats.csv  phase_coherence_study.py  prototype_alpha.py
experiments/local_perturbation_sweep/: EXECUTIVE_SUMMARY.md  README.md  sweep_datagen.py  test_perturbation_sweep.py  utils.py
experiments/results/phase_coherence_study/: FINDINGS.md  fold_metrics.csv  summary.json
gists/breathing/czt_feature_extractor/: README.md  TESTING_GUIDELINES.md  dna_breathing_gist.py  features.csv  test_features.csv
gists/breathing/czt_feature_extractor/data/processed/: brunello_gc1000.fasta  brunello_grouped.fasta  brunello_stability.fasta  mutated_brunello.fasta  real_brunello.fasta  real_crispr.fasta  sample.fasta
gists/breathing/czt_feature_extractor/results/: real_large_features.csv
gists/breathing/czt_feature_extractor/src/: dna_breathing_gist.py  download_brunello.py  features.csv  parse_brunello_to_fasta.py  parse_local_brunello.py  plot_results.py  prepare_scenario1_data.py  subsample_depmap.py
proof_pack/: __init__.py  quick_validation_demo.py  validation_framework.py
protocols/: WET_LAB_VALIDATION_PROTOCOL.md
reports/: validation_stats.md
results/local_perturbation_sweep/: EXECUTIVE_SUMMARY.md
results/sweep_run1/: FINDINGS.md
results/sweep_run2/: FINDINGS.md
results/sweep_run3/: FINDINGS.md
scripts/: curate_and_subsample.py  download_raw.py  run_kappa_weighted_validation.py  run_validation_analysis.py  validate_dataset.py
src/: __init__.py
src/bio/: __init__.py
src/core/: __init__.py  params.py
src/extensions/: README.md  __init__.py  common.h  fast_compute_example.c
src/math/: __init__.py  kappa_weighted.py
system-instructions/: v1.0.0.md
tests/: __init__.py  conftest.py
tests/integration/: test_workflow.py
tests/performance/: test_benchmarks.py
tests/unit/: test_dna_breathing_gist.py  test_kappa_weighted.py  test_params.py  test_phase_coherence_study.py  test_prototype_alpha.py
tests/validation/: __init__.py  test_ddg_helical_validation.py  test_local_perturbation.py
(+13 files in other folders)
