[build-system]
requires = ["setuptools>=65.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-breathing-dynamics"
version = "0.1.0"
description = "Hybrid bioinformatics and mathematical modeling framework for DNA breathing dynamics analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VelocityWorks"}
]
keywords = [
    "bioinformatics",
    "dna",
    "breathing-dynamics",
    "mathematical-modeling",
    "high-performance-computing",
    "apple-silicon"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.11.4",
    "mpmath>=1.3.0",
    "pandas>=2.1.4",
    "biopython>=1.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

visualization = [
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
]

all = [
    "dna-breathing-dynamics[dev,visualization]",
]

[project.urls]
Homepage = "https://github.com/velocityworks/dna-breathing-dynamics"
Repository = "https://github.com/velocityworks/dna-breathing-dynamics"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance benchmark tests",
    "validation: Scientific validation tests",
    "smoke: Quick smoke tests (<5s)",
    "slow: Slow tests (>5s)",
    "apple_silicon: Tests requiring Apple Silicon hardware",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
